--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -7,39 +7,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Web Page</title>
-  <!--Link de estilos-->
-  <link rel="stylesheet" href="styles.css">
+
   <!-- Bootstrap CND-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+  <!--Link de estilos-->
+  <link rel="stylesheet" href="styles.css">
   <!--Fonts Awesome-->
   <script src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">Hola
+  <nav class="navbar-expand-sm bg-dark navbar-dark">
     <div class="container">
-      <ul class="nav nav-bordered">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-      </ul>
+      <a href="index.html" class="navbar-brand">WebSite</a>
+      <button type="button" class="navbar-toggler" data-toggler="collapse" data-target="#navbarCollapse"></button>
+      <span class="navbar-toggler-icon"></span>
+      <div class="collapse navbar-collapse d-flex justify-content-end">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#home-section" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Info</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </nav>
 
-  <i class="fas fa-apple-alt">manzanaasdwe</i>
-  <br>
+  <!--HOME-->
+  <header id="home-section">
+    <div class="dark-overlay">
+      <div class="home-inner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+              <h1 class="display-1">Lorem, <strong>ipsum</strong> dolor.</h1>
+              <!--ITEM-->
+              <div class="d-flex flex-row">
+                <div class="p-4">
+                  <i class="fas fa-certificate"></i>
+                </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+              </div>
+              <!--ITEM-->
+              <div class="d-flex flex-row">
+                <div class="p-4">
+                  <i class="fas fa-certificate"></i>
+                </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+              </div>
+              <!--ITEM-->
+              <div class="d-flex flex-row">
+                <div class="p-4">
+                  <i class="fas fa-certificate"></i>
+                </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card text center">
+                <div class="card-body">
+                  <h3>Lorem, ipsum.</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsam!</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </header>
 
 
   <!-- Bootstrap script CND-->
