--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -24,19 +24,19 @@
       <a href="index.html" class="navbar-brand">WebSite</a>
       <button type="button" class="navbar-toggler" data-toggler="collapse" data-target="#navbarCollapse"></button>
       <span class="navbar-toggler-icon"></span>
-      <div class="collapse navbar-collapse d-flex justify-content-end">
+      <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a href="#home-section" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Info</a>
+            <a href="#" class="nav-link">Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Contacto</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Login</a>
+            <a href="#" class="nav-link">Regístrate</a>
           </li>
         </ul>
       </div>
@@ -52,36 +52,56 @@
           <div class="row">
             <div class="col-lg-8">
               <h1 class="display-1">Lorem, <strong>ipsum</strong> dolor.</h1>
+
               <!--ITEM-->
               <div class="d-flex flex-row">
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
+
               <!--ITEM-->
               <div class="d-flex flex-row">
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
+
               <!--ITEM-->
               <div class="d-flex flex-row">
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
             </div>
+            
             <div class="col-lg-4">
               <div class="card text center">
                 <div class="card-body">
                   <h3>Lorem, ipsum.</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsam!</p>
+                  <form>
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" placeholder="Username"/>
+                    </div>
+                    <div class="form-group">
+                      <input type="password" class="form-control form-control-lg" placeholder="Password"/>
+                    </div>
+                    <div class="form-group">
+                      <input type="password" class="form-control form-control-lg" placeholder="Confirm Password"/>
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-light" placeholder="Username"/>
+                    </div>
+                  </form>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
