--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -7,24 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Web Page</title>
-
-  <!-- Bootstrap CND-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-  <!--Link de estilos-->
+  <!--BOOTSTRAP CSS-->
+  <link rel="stylesheet" href="css\bootstrap.min.css">
+  <!--CUSTOM CSS-->
   <link rel="stylesheet" href="styles.css">
-  <!--Fonts Awesome-->
+  <!--FONTS AWESOME-->
   <script src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-  <nav class="navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
       <a href="index.html" class="navbar-brand">WebSite</a>
       <button type="button" class="navbar-toggler" data-toggler="collapse" data-target="#navbarCollapse"></button>
       <span class="navbar-toggler-icon"></span>
-      <div class="collapse navbar-collapse d-flex justify-content-end">
+      <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a href="#home-section" class="nav-link">Home</a>
@@ -90,11 +88,10 @@
                       <input type="password" class="form-control form-control-lg" placeholder="Confirm Password"/>
                     </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-light" placeholder="Username"/>
+                      <input type="submit" class="btn btn-outline-primary btn-block" placeholder="Username" value="Send"/>
                     </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -106,13 +103,8 @@
 
   <!-- Bootstrap script CND-->
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+<script src="js/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 
 </body>
 
