Mejoras en los estilos

--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -8,11 +8,12 @@
 
   <title>Web Page</title>
   <!--BOOTSTRAP CSS-->
+  
   <link rel="stylesheet" href="css\bootstrap.min.css">
-  <!--CUSTOM CSS-->
-  <link rel="stylesheet" href="styles.css">
   <!--FONTS AWESOME-->
-  <script src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
+  <script defer src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
+  <!--CUSTOM CSS-->
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -77,6 +78,8 @@
                 <div class="card-body">
                   <h3>Lorem, ipsum.</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsam!</p>
+
+                  <!--FORM-->
                   <form>
                     <div class="form-group">
                       <input type="text" class="form-control form-control-lg" placeholder="Username"/>
@@ -88,8 +91,9 @@
                       <input type="password" class="form-control form-control-lg" placeholder="Confirm Password"/>
                     </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-outline-primary btn-block" placeholder="Username" value="Send"/>
+                      <input type="submit" class="btn btn-primary btn-block" placeholder="Username" value="Send"/>
                     </div>
+                  
                 </div>
               </div>
             </div>
@@ -103,7 +107,7 @@
 
   <!-- Bootstrap script CND-->
 
-<script src="js/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
 <script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 
 </body>
