--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -8,7 +8,7 @@
 
   <title>Web Page</title>
   <!--BOOTSTRAP CSS-->
-  
+
   <link rel="stylesheet" href="css\bootstrap.min.css">
   <!--FONTS AWESOME-->
   <script defer src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
@@ -56,23 +56,29 @@
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
+
               <!--ITEM-->
               <div class="d-flex flex-row">
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
+
               <!--ITEM-->
               <div class="d-flex flex-row">
                 <div class="p-4">
                   <i class="fas fa-certificate"></i>
                 </div>
-                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta, sapiente nihil iste! </div>
+                <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur
+                  soluta, sapiente nihil iste! </div>
               </div>
             </div>
+
             <div class="col-lg-4">
               <div class="card text center">
                 <div class="card-body">
@@ -82,18 +88,18 @@
                   <!--FORM-->
                   <form>
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-lg" placeholder="Username"/>
+                      <input type="text" class="form-control form-control-lg" placeholder="Username" />
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control form-control-lg" placeholder="Password"/>
+                      <input type="password" class="form-control form-control-lg" placeholder="Password" />
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control form-control-lg" placeholder="Confirm Password"/>
+                      <input type="password" class="form-control form-control-lg" placeholder="Confirm Password" />
                     </div>
                     <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-block" placeholder="Username" value="Send"/>
+                      <input type="submit" class="btn btn-primary btn-block" placeholder="Username" value="Send" />
                     </div>
-                  
+
                 </div>
               </div>
             </div>
@@ -103,12 +109,112 @@
     </div>
 
   </header>
+<!--Info Section 1-->
+  <section class='info-section'>
+    <div class='container'>
+      <div class="row">
+        <div class='text-center'>
+          <h1 class="display-4">Info</h1>
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit molestias omnis at soluta
+            earum vel.</p>
+          <button type="button" class="btn btn-outline-primary ">Lorem, ipsum dolor.</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="info-section bg-light text-muted py-5px">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/cohete.png" width="100%">
+        </div>
+        <div class="col-md-6">
+          <h3>Services and products</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur suscipit fugit libero, ex incidunt
+            facere?</p>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <br>
+          <button type="button" class="btn btn-primary btn-lg">Login</button>
+        </div>
+      </div>
+    </div>
+  </section>
+<!--Info Section 2-->
+  <section class='info-section' id="section-2">
+    <div class='container'>
+      <div class="row">
+        <div class='text-center'>
+          <h1 class="display-4">Info</h1>
+          <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit molestias omnis at soluta
+            earum vel.</p>
+          <button type="button" class="btn btn-outline-primary">Lorem, ipsum dolor.</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="info-section bg-light text-muted py-5px">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/cohete.png" width="100%">
+        </div>
+        <div class="col-md-6">
+          <h3>Services and products</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur suscipit fugit libero, ex incidunt
+            facere?</p>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <div class="d-flex flex-row">
+            <div class="p-4">
+              <i class="fas fa-certificate"></i>
+            </div>
+            <div class="p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque porro consectetur soluta,
+              sapiente nihil iste! </div>
+          </div>
+          <br>
+          <button type="button" class="btn btn-outline-secondary btn-lg">Login</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Bootstrap script CND-->
-
-
-<script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+    crossorigin="anonymous"></script>
 
 </body>
 
