--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <!--Navbar-->
   <nav class="navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
       <a href="index.html" class="navbar-brand">WebSite</a>
@@ -43,7 +44,7 @@
 
   </nav>
 
-  <!--HOME-->
+  <!--Home-->
   <header id="home-section">
     <div class="dark-overlay">
       <div class="home-inner">
@@ -109,6 +110,7 @@
     </div>
 
   </header>
+
 <!--Info Section 1-->
   <section class='info-section'>
     <div class='container'>
@@ -122,10 +124,10 @@
       </div>
     </div>
   </section>
-
+<!--Info Section text 1-->
   <section class="info-section bg-light text-muted py-5px">
     <div class="container">
-      <div class="row">
+      <div class="row pt-5">
         <div class="col-md-6">
           <img src="img/cohete.png" width="100%">
         </div>
@@ -160,6 +162,7 @@
       </div>
     </div>
   </section>
+
 <!--Info Section 2-->
   <section class='info-section' id="section-2">
     <div class='container'>
@@ -173,13 +176,10 @@
       </div>
     </div>
   </section>
-
-  <section class="info-section bg-light text-muted py-5px">
+<!--Info Section text 2-->
+  <section class="info-section bg-light text-muted">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="img/cohete.png" width="100%">
-        </div>
+      <div class="row pt-5">
         <div class="col-md-6">
           <h3>Services and products</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur suscipit fugit libero, ex incidunt
@@ -208,9 +208,22 @@
           <br>
           <button type="button" class="btn btn-outline-secondary btn-lg">Login</button>
         </div>
+        <div class="col-md-6">
+          <img src="img/eggTech.jpg" width="80%">
+        </div>
+        
       </div>
     </div>
   </section>
+<!--footer-->
+<footer class="container">
+  <div class="row">
+    <div class="col-md-12 p-5">
+      <p class="text-center">&copy;Copyright 2021 - Córdoba Capital - Argentina</p>
+    </div>
+  </div>
+</footer>
+
 
   <!-- Bootstrap script CND-->
   <script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
