--- a/BootstrapLandinPage/index.html
+++ b/BootstrapLandinPage/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Web Page</title>
-  <!--BOOTSTRAP CSS-->
+  <!--BOOTSTRAP CND-->
 
-  <link rel="stylesheet" href="css\bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--FONTS AWESOME-->
   <script defer src="https://kit.fontawesome.com/1bf6f13a9c.js" crossorigin="anonymous"></script>
   <!--CUSTOM CSS-->
@@ -20,20 +20,22 @@
 <body>
   <!--Navbar-->
   <nav class="navbar-expand-sm bg-dark navbar-dark fixed-top">
-    <div class="container">
+    <div class="container-fluid">
       <a href="index.html" class="navbar-brand">WebSite</a>
-      <button type="button" class="navbar-toggler" data-toggler="collapse" data-target="#navbarCollapse"></button>
-      <span class="navbar-toggler-icon"></span>
-      <div class="collapse navbar-collapse justify-content-end">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a href="#home-section" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Info</a>
+            <a href="#InfoSection" class="nav-link">Info</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Login</a>
@@ -111,8 +113,8 @@
 
   </header>
 
-<!--Info Section 1-->
-  <section class='info-section'>
+  <!--Info Section 1-->
+  <section class='info-section' id= "InfoSection">
     <div class='container'>
       <div class="row">
         <div class='text-center'>
@@ -124,7 +126,7 @@
       </div>
     </div>
   </section>
-<!--Info Section text 1-->
+  <!--Info Section text 1-->
   <section class="info-section bg-light text-muted py-5px">
     <div class="container">
       <div class="row pt-5">
@@ -163,7 +165,7 @@
     </div>
   </section>
 
-<!--Info Section 2-->
+  <!--Info Section 2-->
   <section class='info-section' id="section-2">
     <div class='container'>
       <div class="row">
@@ -176,7 +178,7 @@
       </div>
     </div>
   </section>
-<!--Info Section text 2-->
+  <!--Info Section text 2-->
   <section class="info-section bg-light text-muted">
     <div class="container">
       <div class="row pt-5">
@@ -211,23 +213,22 @@
         <div class="col-md-6">
           <img src="img/eggTech.jpg" width="80%">
         </div>
-        
+
       </div>
     </div>
   </section>
-<!--footer-->
-<footer class="container">
-  <div class="row">
-    <div class="col-md-12 p-5">
-      <p class="text-center">&copy;Copyright 2021 - Córdoba Capital - Argentina</p>
+  <!--footer-->
+  <footer class="container" id="contact">
+    <div class="row">
+      <div class="col-md-12 p-5">
+        <p class="text-center">&copy;Copyright 2021 - Córdoba Capital - Argentina</p>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
 
   <!-- Bootstrap script CND-->
-  <script src="js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 
